--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -181,21 +181,21 @@
     "    model = url.split(\"/\")[-1]\n",
     "    \n",
     "    # 저장할 데이터 경로\n",
-    "    file_name = f\"{maker}_{model}_rtings{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "    file_name = f\"rtings{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "    output_file_name = output_folder/file_name\n",
     "    rtings = Rtings(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
     "\n",
     "    df= rtings.get_score(url,format_df=True)\n",
-    "    score_df = pd.concat([score_df,df], axis=1)\n",
+    "    score_df = pd.concat([score_df,df], axis=0)\n",
     "    FileManager.df_to_excel(score_df, file_name=output_file_name, sheet_name=\"scores\", mode='w')\n",
     "\n",
     "    # 저장할 데이터 경로\n",
     "    df= rtings.get_measurement_reuslts(url)\n",
-    "    measurement_df = pd.concat([measurement_df,df], axis=1)\n",
+    "    measurement_df = pd.concat([measurement_df,df], axis=0)\n",
     "    FileManager.df_to_excel(measurement_df, file_name=output_file_name, sheet_name=\"measurement\", mode='a')\n",
     "\n",
     "    comments_df = rtings.get_commetns(url, format_df=True)\n",
-    "    comments_df = pd.concat([comments_df,df], axis=1)\n",
+    "    comments_df = pd.concat([comments_df,df], axis=0)\n",
     "    FileManager.df_to_excel(comments_df, file_name=output_file_name, sheet_name=\"comments\", mode='a')"
    ]
   },
@@ -205,16 +205,6 @@
    "metadata": {},
    "source": [
     "## plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d69b5e2-b738-46a0-8f33-e8964bb07866",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_bup = measurement_df.copy()"
    ]
   },
   {
@@ -233,10 +223,10 @@
    "outputs": [],
    "source": [
     "col_socres = [\"maker\",\"product\",\"header\", \"score\"]\n",
-    "data_df = df_bup[col_socres].drop_duplicates().replace(\"\",np.nan).dropna()\n",
+    "data_df = measurement_df[col_socres].drop_duplicates().replace(\"\",np.nan).dropna()\n",
     "data_df[\"score\"] = data_df[\"score\"].map(lambda x:float(x))\n",
     "data_df[\"product\"] = data_df[\"product\"].map(lambda x: x.replace(\"-oled\",\"\"))\n",
-    "data_df = data_df.pivot(index=[\"maker\",\"product\"], columns=\"header\", values='score')\n"
+    "data_df = data_df.pivot(index=[\"maker\",\"product\"], columns=\"header\", values='score')"
    ]
   },
   {
@@ -247,7 +237,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8,10))\n",
-    "sns.heatmap(data_df.T, annot=True, cmap=\"cividis\", cbar=True)\n",
+    "sns.heatmap(data_df.T, annot=True, cmap=\"cividis\", cbar=True, vmin=0, vmax=10)\n",
     "plt.title(\"heatmap for Rtings\")\n",
     "plt.show()"
    ]
@@ -290,9 +280,11 @@
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "sns.set_style(\"white\")\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "sns.lineplot(data=data_df.T, dashes=False, markers=True, palette='YlGnBu')\n",
+    "plt.yticks([200, 1000, 1500, 2000], ['200', '1000', '1500', '2000'])\n",
     "sns.despine()"
    ]
   },
@@ -305,8 +297,10 @@
    "source": [
     "import plotly.express as px\n",
     "fig = px.line(data_df.T, x=data_df.T.index, y=data_df.T.columns, title='HDR Brightness',\n",
-    "              labels={'index': 'APL', 'value': 'Brightness'}, line_shape='linear')\n",
+    "              labels={'index': 'APL', 'value': 'Brightness'}, line_shape='linear',\n",
+    "              color_discrete_sequence=px.colors.qualitative.Vivid)\n",
     "fig.update_layout(width=1000, height=500, template='plotly_white', margin=dict(l=10, r=10, b=10, t=40))\n",
+    "fig.update_yaxes(range=[0, 2000], tickvals=[200, 1000, 1500, 2000], ticktext=['200', '1000', '1500', '2000'])\n",
     "fig.show()\n",
     "\n",
     "# template='plotly_dark','ggplot2', 'seaborn', 'simple_white', 'plotly', 'plotly_white'"
