--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdr_df = df_bup[df_bup[\"header\"] == 'HDR Brightness']\n",
+    "hdr_df = measurement_df[measurement_df[\"header\"] == 'HDR Brightness']\n",
     "hdr_df[\"result_value\"] = hdr_df[\"result_value\"].map(lambda x: x.replace(\"cd/m²\",\"\")).map(lambda x: x.replace(\",\",\"\")).map(lambda x:x.strip()).map(lambda x:float(x))\n",
     "hdr_df_peak = hdr_df[hdr_df.label.map(lambda x:True if \"Peak\" in x else False)]\n",
     "hdr_df_peak[\"label\"] = hdr_df_peak[\"label\"].map(lambda x: int(x.split(\"%\")[0].split(\" \")[-1]))\n",
