--- a/quick_guide_market_rtings.ipynb
+++ b/quick_guide_market_rtings.ipynb
@@ -321,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set(df_bup.header)"
+    "set(measurement_df.header)"
    ]
   },
   {
