--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -197,8 +197,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "col_oled = []\n",
+    "\n",
     "df_models_summary = dc.get_df_cleaned()\n",
-    "print(df_models_summary.columns)"
+    "col_oled.extend([ column for column in df_models_summary.T.columns  if 'oled' in column[1]])\n",
+    "oled_df = df_models_summary.T[col_oled]\n",
+    "print(oled_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc2ee4c7-0bae-428a-a28a-68fd8ff2529e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting.heatmap(df=oled_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "331cfc70-e25f-44fc-8496-3e623eb6a82e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee64e1f8-f1ca-4833-b6e6-362c8b213bcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_models_summary = dc.get_df_cleaned()"
    ]
   },
   {
