--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -200,7 +200,7 @@
     "col_oled = []\n",
     "\n",
     "df_models_summary = dc.get_df_cleaned()\n",
-    "col_oled.extend([ column for column in df_models_summary.T.columns  if 'oled' in column[1]])\n",
+    "col_oled.extend([ column for column in df_models_summary.T.columns if 'oled' in column[1]])\n",
     "oled_df = df_models_summary.T[col_oled]\n",
     "print(oled_df.columns)"
    ]
@@ -260,9 +260,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FileManager.df_to_excel(df_models_summary, file_name=file_name_s, sheet_name=\"summary_na\", mode='w')\n",
-    "FileManager.df_to_excel(df_models_prices, file_name=file_name_s, sheet_name=\"prices_na\",  mode='a')\n",
-    "FileManager.df_to_excel(df_models, file_name=file_name_s, sheet_name=\"raw_na\", mode='a')"
+    "FileManager.df_to_excel(df_models_summary.reset_index(), file_name=file_name_s, sheet_name=\"summary_na\", mode='w')\n",
+    "FileManager.df_to_excel(df_models_prices.reset_index(), file_name=file_name_s, sheet_name=\"prices_na\",  mode='a')\n",
+    "FileManager.df_to_excel(df_models.reset_index(), file_name=file_name_s, sheet_name=\"raw_na\", mode='a')"
    ]
   },
   {
