--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -60,13 +60,17 @@
    "outputs": [],
    "source": [
     "from market_research import SONYSPEC, SONYSPEC_JP, PANASONICSPEC\n",
+    "from market_research.scraper.models import SONYSPEC, SONYJPSPEC, PANASONICSPEC\n",
     "from market_research import DataCleanup_s\n",
     "from market_research import Plotting_s\n",
     "from market_research.tools import FileManager\n",
     "from market_research.tools import DataComparator\n",
     "from datetime import date\n",
     "from google.colab import files\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "from market_research.scraper.rtings import Rtings, Rurlsearcher, Rvisualizer\n",
+    "from market_research.tools import FileManager"
    ]
   },
   {
