--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -69,31 +69,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ac45040",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "webdriver_path = \"/content/chromedriver/chromedriver\"\n",
-    "browser_path = \"/content/chrome/chrome\"\n",
-    "enable_headless = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac9e9fec-07e4-44ac-ac9e-d6cf05d1b06a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 폴더가 존재하지 않으면 폴더 생성\n",
-    "output_folder = Path('results_spec')  \n",
-    "if not output_folder.exists():\n",
-    "  output_folder.mkdir(parents=True, exist_ok=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a",
    "metadata": {},
@@ -112,21 +87,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107b8e8b-526a-4afc-8df8-6fd898d43e21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name_s = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sonyspec = SONYSPEC(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "sonyspec = SONYSPEC(export_prefix=\"sony_model_info_web\")\n",
     "df_models = sonyspec.get_models_info()"
    ]
   },
@@ -145,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc = DataCleanup_s(df_models)"
+    "dc = DataCleanup_s(df_models)\n",
+    "df_models_prices = dc.get_price_df()"
    ]
   },
   {
@@ -157,14 +123,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a96cbc6a-645e-490e-ae44-a3f98a4a5d8b",
+   "metadata": {},
+   "source": [
+    "## Plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0d40ec7d-2d9a-4aad-9dcc-cfc94a7cc19d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_models_prices = dc.get_price_df()\n",
-    "print(df_models_prices.columns)"
+    "plotting=Plotting_s1(df_models_prices)"
    ]
   },
   {
@@ -174,11 +147,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotting=Plotting_s(df_models_prices)\n",
     "col_group = [\"year\", \"display type\"]\n",
-    "plotting.group_plot_bar(col_group =col_group , col_plot=\"price_discount\")\n",
-    "col_group = [\"display type\", \"size\"]\n",
-    "plotting.group_plot_bar(col_group =col_group , col_plot=\"price_discount\")"
+    "plotting.group_plot_bar(col_group = col_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe29419e-7f11-4cc8-b53b-ac45ff12eb7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_group = [\"year\",\"display type\", \"size\"]\n",
+    "plotting.group_plot_bar(col_group =col_group)"
    ]
   },
   {
@@ -199,6 +180,7 @@
     "col_oled = []\n",
     "\n",
     "df_models_summary = dc.get_df_cleaned()\n",
+    "## get_level~~~ index== \"oled\"\n",
     "col_oled.extend([ column for column in df_models_summary.T.columns if 'oled' in column[1]])\n",
     "oled_df = df_models_summary.T[col_oled]\n",
     "print(oled_df.columns)"
