--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -54,18 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research.scraper.models import SONYSPEC, SONYJPSPEC, PANASONICSPEC\n",
-    "from market_research.scraper.models import DataCleanup_s, Plotting_s\n",
-    "from market_research.tools import FileManager\n",
-    "from market_research.tools import DataComparator\n",
-    "from datetime import date\n",
-    "from google.colab import files\n",
-    "from pathlib import Path"
+    "from market_research.scraper import Specscraper_s, Visualizer_s\n",
+    "from market_research.scraper import Specscraper_sjp, Specscraper_p"
    ]
   },
   {
@@ -91,35 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sonyspec = SONYSPEC(export_prefix=\"sony_model_info_web\")\n",
-    "df_models = sonyspec.get_models_info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8022e83e-4f01-4f2a-9067-40d57087cde5",
-   "metadata": {},
-   "source": [
-    "#### sumarization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b77a458a-dd59-407c-98e7-4629adf2d649",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dc = DataCleanup_s(df_models)\n",
-    "df_models_prices = dc.get_price_df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72c20966-ef76-48a8-9d73-7553b97596ac",
-   "metadata": {},
-   "source": [
-    "##### sector prices discount rate"
+    "scraper_s = Specscraper_s(export_prefix=\"sony_model_info_web\")\n",
+    "df_models = spec_scraper_s.get_models_info()"
    ]
   },
   {
@@ -137,7 +105,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotting=Plotting_s1(df_models_prices)"
+    "visualizer_s=Visualizer_s(df_models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bc263e1b-b629-4f6a-ab96-68705bb47114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualizer_s.heatmap_spec(display_types=['oled','lcd', 'led', 'mini led'])"
    ]
   },
   {
@@ -147,8 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col_group = [\"year\", \"display type\"]\n",
-    "plotting.group_plot_bar(col_group = col_group)"
+    "visualizer_s.group_plot_bar(col_group = [\"year\", \"display type\"])"
    ]
   },
   {
@@ -158,104 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col_group = [\"year\",\"display type\", \"size\"]\n",
-    "plotting.group_plot_bar(col_group =col_group)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a036033-2957-44f7-a490-b9e40dd752c7",
-   "metadata": {},
-   "source": [
-    "##### sector spec heatmap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "744f8e86-e65e-45e7-9929-6f96441ad8e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_oled = []\n",
-    "\n",
-    "df_models_summary = dc.get_df_cleaned()\n",
-    "## get_level~~~ index== \"oled\"\n",
-    "col_oled.extend([ column for column in df_models_summary.T.columns if 'oled' in column[1]])\n",
-    "oled_df = df_models_summary.T[col_oled]\n",
-    "print(oled_df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc2ee4c7-0bae-428a-a28a-68fd8ff2529e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotting.heatmap(df=oled_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee64e1f8-f1ca-4833-b6e6-362c8b213bcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_models_summary = dc.get_df_cleaned()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ca72bf7-ee61-482a-bc05-a57c4d4b7768",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotting=Plotting_s(df_models_prices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b51640a6-e56f-45a5-84f3-0a46c3e9d35a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotting.heatmap(df=df_models_summary)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f61f86ba-e9d5-47dd-98a7-8de01dff925d",
-   "metadata": {},
-   "source": [
-    "#### file download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96c99fe1-17b7-4035-8099-1869e5ab62d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FileManager.df_to_excel(df_models_summary.reset_index(), file_name=file_name_s, sheet_name=\"summary_na\", mode='w')\n",
-    "FileManager.df_to_excel(df_models_prices.reset_index(), file_name=file_name_s, sheet_name=\"prices_na\",  mode='a')\n",
-    "FileManager.df_to_excel(df_models.reset_index(), file_name=file_name_s, sheet_name=\"raw_na\", mode='a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd7fb45e-1b36-402c-9908-dc4c49886599",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, idx in enumerate(df_models_summary.index):\n",
-    "    print(f\"{df_models_summary.index[0]} vs {idx}\")\n",
-    "    DataComparator.is_equal_each_columns(df_models_summary.iloc[0,:], df_models_summary.iloc[i,:])"
+    "visualizer_s.group_plot_bar(col_group =[\"year\",\"display type\", \"size\"])"
    ]
   },
   {
@@ -269,32 +149,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "576a34f7-29b4-4007-b77c-9fd22ae7137d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name_sjp =  f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a9e06db7-0bfa-4841-b695-2826f942296f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sonyspec_jp = SONYSPEC_JP(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sonyspec_jp.get_models_info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e44a5a33-c0e0-429c-9124-e8e73716374b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_sjp, sheet_name=\"raw_na\", mode='w')"
+    "scraper_sjp = Specscraper_sjp(export_prefix=\"sony_model_info_web_jp\")\n",
+    "df_models = scraper_sjp.get_models_info()"
    ]
   },
   {
@@ -308,32 +168,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c3bfc3-7d60-49e0-bb56-f8b6b87e066e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name_p = f\"pana_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1eccd54b-edf0-41ef-97d3-92b4bd79465f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "panasonicspec = PANASONICSPEC(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "df_models = panasonicspec.get_models_info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba28d1c5-be63-454b-a2f0-e65da4b62713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FileManager.df_to_excel(df_models, file_name=file_name_p, sheet_name=\"raw_uk\", mode='w')"
+    "scraper_p = Specscraper_p(export_prefix=\"pana_model_info_web\")\n",
+    "df_models = scraper_p.get_models_info()"
    ]
   },
   {
@@ -351,6 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import files\n",
     "!zip -r /content/results_spec.zip /content/results_spec\n",
     "files.download('/content/results_spec.zip')"
    ]
