--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -30,7 +30,7 @@
     "!pip install -U wordcloud nltk \n",
     "!pip install -U scikit-learn openai \n",
     "!pip install -U matplotlib seaborn\n",
-    "!pip install -U getmodelspec"
+    "!pip install -U mkt-retv"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "scraper_s = Specscraper_s(export_prefix=\"sony_model_info_web\")\n",
-    "df_models = spec_scraper_s.get_models_info()"
+    "df_s_models = scraper_s.get_models_info()"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer_s=Visualizer_s(df_models)"
+    "visualizer_s = Visualizer_s(df_models)"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "scraper_sjp = Specscraper_sjp(export_prefix=\"sony_model_info_web_jp\")\n",
-    "df_models = scraper_sjp.get_models_info()"
+    "df_sjp_models = scraper_sjp.get_models_info()"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "scraper_p = Specscraper_p(export_prefix=\"pana_model_info_web\")\n",
-    "df_models = scraper_p.get_models_info()"
+    "df_p_models = scraper_p.get_models_info()"
    ]
   },
   {
