--- a/quick_guide_textanalysis.ipynb
+++ b/quick_guide_textanalysis.ipynb
@@ -29,7 +29,7 @@
     "!pip install -U wordcloud nltk \n",
     "!pip install -U scikit-learn openai \n",
     "!pip install -U matplotlib seaborn\n",
-    "!pip install -U getmodelspec"
+    "!pip install -U mkt-retv"
    ]
   },
   {
