--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer_s = Visualizer_s(df_models)"
+    "visualizer_s = Visualizer_s(df_s_models)"
    ]
   },
   {
@@ -192,8 +192,8 @@
    "outputs": [],
    "source": [
     "from google.colab import files\n",
-    "!zip -r /content/results_spec.zip /content/results_spec\n",
-    "files.download('/content/results_spec.zip')"
+    "!zip -r /content/results.zip /content/results\n",
+    "files.download('/content/results.zip')"
    ]
   },
   {
