--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -143,7 +143,7 @@
    "id": "555ebe6a-20e9-4961-88c8-48947dc5c1ad",
    "metadata": {},
    "source": [
-    "### sonyspec_jp"
+    "## sonyspec_jp"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "id": "012fbc6e-9a24-4c73-bb4f-edd383d7fda9",
    "metadata": {},
    "source": [
-    "### panasonicspec"
+    "## panasonicspec"
    ]
   },
   {
