--- a/quick_guide_imganalysis.ipynb
+++ b/quick_guide_imganalysis.ipynb
@@ -189,7 +189,8 @@
      "text": [
       "Arcane__Official_Trailer__Netflix\n",
       "Arcane_Season_2__SEASON_2_PROMO_TRAILER__Netflix__arcane_season_2_trailer\n",
-      "Elemental__Official_Trailer\n"
+      "Elemental__Official_Trailer\n",
+      "SPIDER-MAN_ACROSS_THE_SPIDER-VERSE_-_Official_Trailer_(HD)\n"
      ]
     }
    ],
@@ -224,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ima.to_lab_images(image_list, showmode=False)"
+    "ima.to_lab_images(image_list, showmode=True)"
    ]
   },
   {
