--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -54,13 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research.scraper import Specscraper_s, Visualizer_s\n",
-    "from market_research.scraper import Specscraper_sjp, Specscraper_p"
+    "from market_research.scraper import Specscraper_s, Specscraper_sjp\n",
+    "from market_research.scraper import Specscraper_p, Specscraper_pjp\n",
+    "from market_research.scraper import Visualizer_s"
    ]
   },
   {
@@ -74,7 +75,9 @@
   {
    "cell_type": "markdown",
    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### sonyspec"
    ]
@@ -174,7 +177,9 @@
   {
    "cell_type": "markdown",
    "id": "555ebe6a-20e9-4961-88c8-48947dc5c1ad",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### sonyspec_jp"
    ]
@@ -207,6 +212,25 @@
    "source": [
     "scraper_p = Specscraper_p(export_prefix=\"pana_model_info_web\")\n",
     "df_p_models = scraper_p.get_models_info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f391a7-a11a-42d4-a47a-f49cdb19b543",
+   "metadata": {},
+   "source": [
+    "### panasonicspec_jp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "043da2e6-e206-4a28-b982-c87f2cbfe0e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scraper_pjp = Specscraper_pjp(export_prefix=\"pana_model_info_web_jp\")\n",
+    "df_pjp_models = scraper_pjp.get_models_info()"
    ]
   },
   {
