--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -198,7 +198,9 @@
   {
    "cell_type": "markdown",
    "id": "012fbc6e-9a24-4c73-bb4f-edd383d7fda9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### panasonicspec"
    ]
@@ -217,14 +219,16 @@
   {
    "cell_type": "markdown",
    "id": "45f391a7-a11a-42d4-a47a-f49cdb19b543",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### panasonicspec_jp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "043da2e6-e206-4a28-b982-c87f2cbfe0e0",
    "metadata": {},
    "outputs": [],
@@ -236,7 +240,9 @@
   {
    "cell_type": "markdown",
    "id": "1cd68dd3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## colab에서 파일 받기"
    ]
