--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -27,10 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U pandas openpyxl tqdm --q\n",
-    "!pip install -U requests selenium beautifulsoup4 --q\n",
-    "!pip install -U matplotlib seaborn --q\n",
-    "!pip install -U mkt-retv --q"
+    "!pip install -U pandas openpyxl tqdm requests selenium beautifulsoup4 matplotlib seaborn mkt-retv --q\n"
    ]
   },
   {
