--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -30,7 +30,7 @@
     "!pip install -U pandas openpyxl tqdm --q\n",
     "!pip install -U requests selenium beautifulsoup4 --q\n",
     "!pip install -U matplotlib seaborn --q\n",
-    "!pip install -U mkt-retv --q\n"
+    "!pip install -U mkt-retv --q"
    ]
   },
   {
