--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -84,13 +84,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7061af82-080c-4098-a6fb-951dbad47d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temporary_year_marking = True #for 2024 line-up mark"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {},
    "outputs": [],
    "source": [
     "scraper_s = Specscraper_s(export_prefix=\"sony_model_info_web\")\n",
-    "df_s_models = scraper_s.get_models_info()"
+    "df_s_models = scraper_s.get_models_info(temporary_year_marking=temporary_year_marking)"
    ]
   },
   {
