--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -77,7 +77,9 @@
   {
    "cell_type": "markdown",
    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### sonyspec"
    ]
@@ -99,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper_s = Specscraper_s(export_prefix=\"sony_model_info_web\")\n",
+    "scraper_s = Specscraper_s()\n",
     "df_s_models = scraper_s.get_models_info(temporary_year_marking=temporary_year_marking)"
    ]
   },
@@ -201,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper_sjp = Specscraper_sjp(export_prefix=\"sony_model_info_web_jp\")\n",
+    "scraper_sjp = Specscraper_sjp()\n",
     "df_sjp_models = scraper_sjp.get_models_info()"
    ]
   },
@@ -222,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper_p = Specscraper_p(export_prefix=\"pana_model_info_web\")\n",
+    "scraper_p = Specscraper_p()\n",
     "df_p_models = scraper_p.get_models_info()"
    ]
   },
@@ -243,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper_pjp = Specscraper_pjp(export_prefix=\"pana_model_info_web_jp\")\n",
+    "scraper_pjp = Specscraper_pjp()\n",
     "df_pjp_models = scraper_pjp.get_models_info()"
    ]
   },
