--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7061af82-080c-4098-a6fb-951dbad47d80",
    "metadata": {},
    "outputs": [],
@@ -91,56 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "collecting models\n",
-      "The website scan has been completed.\n",
-      "number of total series: 28\n",
-      "number of total model: 97\n",
-      "collecting spec\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|██▋                                                                                                                              | 2/97 [01:59<1:34:09, 59.47s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred on page 3rd : k75xr70 try 1/10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 11%|██████████████▍                                                                                                                | 11/97 [24:59<3:15:26, 136.35s/it]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m scraper_s \u001b[38;5;241m=\u001b[39m Specscraper_s()\n\u001b[1;32m----> 2\u001b[0m df_s_models \u001b[38;5;241m=\u001b[39m \u001b[43mscraper_s\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_models_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemporary_year_marking\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtemporary_year_marking\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Documents\\github\\research-market-tv\\market_research\\scraper\\models\\sony\\spec_s.py:44\u001b[0m, in \u001b[0;36mModelScraper_s.get_models_info\u001b[1;34m(self, format_df, fastmode, temporary_year_marking)\u001b[0m\n\u001b[0;32m     42\u001b[0m dict_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_model_info(url_model)\n\u001b[0;32m     43\u001b[0m dict_models[key] \u001b[38;5;241m=\u001b[39m dict_info\n\u001b[1;32m---> 44\u001b[0m dict_spec \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_global_spec\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43murl_model\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m dict_models[key]\u001b[38;5;241m.\u001b[39mupdate(dict_spec)\n\u001b[0;32m     46\u001b[0m visit_url_dict[key] \u001b[38;5;241m=\u001b[39m url_model\n",
-      "File \u001b[1;32m~\\Documents\\github\\research-market-tv\\market_research\\scraper\\models\\sony\\spec_s.py:180\u001b[0m, in \u001b[0;36m_get_global_spec\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    178\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweb_driver\u001b[38;5;241m.\u001b[39mmove_element_to_center(element_spec)\n\u001b[0;32m    179\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtracking_log:\n\u001b[1;32m--> 180\u001b[0m     driver\u001b[38;5;241m.\u001b[39msave_screenshot(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdir_model\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstamp_url\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_1_move_to_spec_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstamp_today\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    181\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwait_time)\n\u001b[0;32m    183\u001b[0m element_click_spec \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mID, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPDPSpecificationsLink\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scraper_s = Specscraper_s()\n",
     "df_s_models = scraper_s.get_models_info(temporary_year_marking=temporary_year_marking)"
@@ -209,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper_l = ModelScraper_l()\n",
+    "scraper_l = Specscraper_l()\n",
     "df_l_models = scraper_l.get_models_info()"
    ]
   },
