--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7061af82-080c-4098-a6fb-951dbad47d80",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,26 @@
    "execution_count": null,
    "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collecting models\n",
+      "The website scan has been completed.\n",
+      "number of total series: 28\n",
+      "number of total model: 97\n",
+      "collecting spec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|███▉                                                                                                                             | 3/97 [02:20<1:12:55, 46.54s/it]"
+     ]
+    }
+   ],
    "source": [
     "scraper_s = Specscraper_s()\n",
     "df_s_models = scraper_s.get_models_info(temporary_year_marking=temporary_year_marking)"
