--- a/quick_guide_market_models.ipynb
+++ b/quick_guide_market_models.ipynb
@@ -16,8 +16,7 @@
    "cell_type": "markdown",
    "id": "30216803",
    "metadata": {
-    "id": "30216803",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "30216803"
    },
    "source": [
     "# Env setting: Install Colab selenium & crome driver"
@@ -32,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -U pandas openpyxl tqdm --q\n",
+    "!pip install -U openpyxl tqdm --q\n",
     "!pip install -U requests selenium beautifulsoup4 --q\n",
     "!pip install -U matplotlib seaborn --q\n",
     "!pip install -U mkt-retv --q"
