--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -16,7 +16,8 @@
    "cell_type": "markdown",
    "id": "30216803",
    "metadata": {
-    "id": "30216803"
+    "id": "30216803",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "# Env setting: Install Colab selenium & crome driver"
