--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -81,8 +81,7 @@
    "cell_type": "markdown",
    "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a",
    "metadata": {
-    "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a"
    },
    "source": [
     "# 실행"
@@ -92,8 +91,7 @@
    "cell_type": "markdown",
    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
    "metadata": {
-    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc"
    },
    "source": [
     "## sonyspec"
@@ -139,8 +137,7 @@
    "cell_type": "markdown",
    "id": "a96cbc6a-645e-490e-ae44-a3f98a4a5d8b",
    "metadata": {
-    "id": "a96cbc6a-645e-490e-ae44-a3f98a4a5d8b",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "a96cbc6a-645e-490e-ae44-a3f98a4a5d8b"
    },
    "source": [
     "### Plot"
@@ -211,7 +208,7 @@
     }
    ],
    "source": [
-    "visualizer_s.group_plot_bar(col_group = [\"year\", \"display type\"])"
+    "visualizer_s.group_price_bar(col_group = [\"year\", \"display type\"])"
    ]
   },
   {
@@ -239,7 +236,7 @@
     }
    ],
    "source": [
-    "visualizer_s.group_plot_bar(col_group =[\"year\",\"display type\", \"size\"])"
+    "visualizer_s.group_price_bar(col_group =[\"year\",\"display type\", \"size\"])"
    ]
   },
   {
