--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -35,7 +35,8 @@
     "!pip install -U openpyxl tqdm --q\n",
     "!pip install -U requests selenium beautifulsoup4 --q\n",
     "!pip install -U matplotlib seaborn --q\n",
-    "!pip install -U mkt-retv --q"
+    "!pip install -U mkt-retv --q",
+    "!pip install -U xik_tools --q"
    ]
   },
   {
