--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -186,6 +186,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ace63a40-e618-4548-9cff-4dda96662d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualizer_s.price_map()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "b61b8ec3-92c1-4d60-a2c3-71a18448f8f8",
    "metadata": {
@@ -391,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.19"
   },
   "toc": {
    "base_numbering": 1,
