--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "from market_research.tools.installer import Installer\n",
+    "from tools.web import Installer\n",
     "Installer.install_chrome_and_driver()"
    ]
   },
