--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -75,7 +75,7 @@
     "from market_research.scraper import Specscraper_s, Specscraper_sjp\n",
     "from market_research.scraper import Specscraper_l\n",
     "from market_research.scraper import Specscraper_p, Specscraper_pjp\n",
-    "from market_research.scraper import Visualizer_s"
+    "from market_research.scraper import DataVisualizer"
    ]
   },
   {
