--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -56,8 +56,7 @@
    "cell_type": "markdown",
    "id": "6e1cbb67",
    "metadata": {
-    "id": "6e1cbb67",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "6e1cbb67"
    },
    "source": [
     "# Import Package"
@@ -75,7 +74,7 @@
     "from market_research.scraper import Specscraper_s, Specscraper_sjp\n",
     "from market_research.scraper import Specscraper_l\n",
     "from market_research.scraper import Specscraper_p, Specscraper_pjp\n",
-    "from market_research.scraper import Visualizer_s"
+    "from market_research.scraper import DataVisualizer"
    ]
   },
   {
@@ -92,8 +91,7 @@
    "cell_type": "markdown",
    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
    "metadata": {
-    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc"
    },
    "source": [
     "## sonyspec"
@@ -111,22 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {
     "id": "04403ca4-778f-4866-b206-542d682ce23d"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "collecting models, 16 process\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scraper_s = Specscraper_s(enable_headless=False)\n",
+    "scraper_s = Specscraper_s()\n",
     "df_s_models = scraper_s.get_models_info()"
    ]
   },
@@ -149,7 +139,7 @@
    },
    "outputs": [],
    "source": [
-    "visualizer_s = Visualizer_s(df_s_models)"
+    "visualizer_s = DataVisualizer(df_s_models)"
    ]
   },
   {
@@ -187,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer_s.generate_price_map()"
+    "visualizer_s.price_map()"
    ]
   },
   {
